--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <header>
+    <!-- <header>
         <h1>Namma Travel Diaries</h1>
         <nav>
             <a href="#" class="active">Home</a>
@@ -16,7 +16,7 @@
             <a href="#">Services</a>
             <a href="#">Contact</a>
         </nav>
-    </header>
+    </header> -->
 
     <section class="home">
         <img src="assets/mount2.png" class="mount2">
