--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img src="assets/mount1.png" class="mount1">
         <img src="assets/Untitled_design-removebg-preview.png" class="bush2">
 
-        <h1 class="title"></h1>
+        <h1 class="title">title</h1>
 
         <img src="assets/bush1.png" class="bush1">
         <img src="assets/leaf2.png" class="leaf2">
