--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="home">
         <img src="assets/mount2.png" class="mount2">
         <img src="assets/mount1.png" class="mount1">
-        <img src="assets/Untitled_design-removebg-preview.png" class="bush2">
+        <img src="assets/hero-logo.png" class="bush2">
         <h2 class="title d-md-none">NAMMA TRAVEL DIARIES</h2>
         <img src="assets/bush1.png" class="bush1">
         <img src="assets/leaf2.png" class="leaf2">
@@ -19,13 +19,39 @@
     </section>
 
     <section class="about">
-        <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis rem aliquid unde praesentium harum consequuntur consequatur exercitationem quas officiis quod quidem amet, illum facere ipsam vitae quae, a aut non numquam minus voluptate doloremque. Fugiat dolor dolores, temporibus, culpa quia illo, enim sint harum adipisci voluptatem aliquid. Officia tempore dolore natus iure, odit blanditiis? Voluptate aliquid vel suscipit fugiat dolor distinctio, blanditiis cupiditate rerum quidem repellat sint vero error minima? Culpa, porro ipsa totam consequuntur molestiae nulla dignissimos voluptatum provident, minima eligendi sapiente tempore quas asperiores, reiciendis veritatis placeat? Odit nobis rem a iste reiciendis nemo tempore quae asperiores quia.</p>
-        <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, aliquam illum. Totam inventore beatae, facilis harum adipisci molestias blanditiis voluptatibus consequatur, explicabo, voluptates consectetur eaque nihil perferendis ratione architecto. Unde odio modi dolor, suscipit nostrum quibusdam quia minima, facilis distinctio aliquid excepturi. Repellendus consequuntur numquam, minus tenetur commodi ipsum velit aspernatur nostrum suscipit explicabo possimus molestiae minima doloribus. Doloribus architecto voluptates perferendis nostrum ullam hic odio sunt. Dolores facilis, pariatur eligendi excepturi accusamus optio aliquam maxime aspernatur, explicabo velit cum, quia a cumque voluptas quis nesciunt. Repellendus hic consequuntur aperiam delectus ratione reprehenderit expedita adipisci ut nesciunt amet, exercitationem illo.</p>
-        <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt saepe dolorem consectetur architecto officiis. Unde, at. Magnam sed aliquid nesciunt error sint repudiandae ad. Reiciendis minus, esse eos soluta mollitia quia est! Inventore aliquid ut hic fuga ratione consectetur ea? Ratione tempore, ab dolor, assumenda neque doloremque voluptate nesciunt eaque, illo ipsa quia. Nihil dolor libero animi quibusdam recusandae et cumque deleniti minima unde iste sint possimus numquam nam, corporis cupiditate? Maxime voluptate atque alias consequuntur tenetur non quia amet, eligendi libero odio adipisci aperiam dolore perferendis illum vero, nam temporibus numquam cumque, neque fuga iste? Totam cum modi excepturi!</p>
+        <div class="container">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="https://via.placeholder.com/300" class="img-fluid" alt="Placeholder Image 1">
+              </div>
+              <div class="col-md-4">
+                <img src="https://via.placeholder.com/300" class="img-fluid" alt="Placeholder Image 2">
+              </div>
+              <div class="col-md-4">
+                <img src="https://via.placeholder.com/300" class="img-fluid" alt="Placeholder Image 3">
+              </div>
+            </div>
+          </div>
+          
     </section>
+
+    <footer class="footer p-3">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4 text-right">
+                <a href="#"><img src="instagram-icon.png" alt="WhatsApp" class="row img-fluid"></a>
+                <a href="#"><img src="instagram-icon.png" alt="Instagram" class="row img-fluid"></a>
+                <a href="#"><img src="instagram-icon.png" alt="Mail" class="row img-fluid"></a>
+                <a href="#"><img src="facebook-icon.png" alt="Facebook" class="row img-fluid"></a>
+                <a href="#"><img src="twitter-icon.png" alt="Twitter" class="row img-fluid"></a>
+              </div>
+         
+          <div class="col-md-4 footer-logo">
+            <img src="./assets/Logo.png" alt="Logo" class="img-fluid" width="200px" height="200px">
+          </div>
+        </div>
+        </div>
+      </footer>
 
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
